--- a/Website/styles.css
+++ b/Website/styles.css
@@ -1,6 +1,16 @@
+#easy {
+    width: 300px;
+    height: 300px;
+    border-radius: 150px;
+    border-color: black;
+    background-color: red;
+    font-size: 50px;
+    color: white;
+    
+}
 body {
     text-align: center;
     font-family: "Impact";
     color: rgb(178,34,34);
-    
+
 }
